testsuite/tests/typecheck/should_fail/tcfail038.stderr
tcfail038.hs:7:11: error: [GHC-10498]
    Conflicting definitions for ‘==’
  |
7 |         a == b = True
  |           ^^
  |
9 |         a == b = False
  |           ^^

tcfail038.hs:8:11: error: [GHC-10498]
    Conflicting definitions for ‘/=’
   |
 8 |         a /= b = False
   |           ^^
   |
10 |         a /= b = True
   |           ^^

